--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,3 +17,9 @@ jobs:
         cache: 'maven'
     - name: Build with Maven
       run: mvn -V -B clean package --file pom.xml
+
+    - name: Upload GitHub Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Plugins
+        path: target
